Fixed footer padding, Applied linear gradient to hero background, Fixed gap of pills item

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@
   flex-direction: column;
   align-items: center;
   padding: 10px 0px;
-  
 }
 
 .menu,
@@ -34,11 +33,11 @@
   text-decoration: none;
 }
 
-
 .hero {
   background-image: url(https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/hero-cruise.png?raw=true);
   background-size: cover;
   background-position: center;
+  /* position: relative; */
   height: 70vh;
   display: flex;
   flex-direction: column;
@@ -64,6 +63,27 @@ button {
   font-family: inherit;
   cursor: pointer;
   transition: background-color 0.3s;
+}
+
+.hero h1,
+.hero p,
+.hero button {
+  position: relative;
+}
+
+.hero {
+  position: relative;
+  background: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.1),
+      transparent
+    ),
+    url("https://github.com/Mohak-Trivedi/xcruise-assets/blob/master/hero-cruise.png?raw=true")
+      no-repeat center center/cover;
+  height: 70vh;
+  background-size: cover;
+  background-position: center;
 }
 
 button:hover {
@@ -94,6 +114,7 @@ button:hover {
   gap: 8px;
   align-items: center;
   padding: 8px 10px;
+  margin-bottom: 3px;
   border-radius: 20px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
@@ -163,7 +184,6 @@ button:hover {
   bottom: 10px;
 }
 
-
 .save-icon {
   padding: 5px;
   border-radius: 50%;
@@ -176,7 +196,7 @@ button:hover {
 }
 
 .save-icon:hover {
-  background-color:rgb(0, 0, 0, 0.6)
+  background-color: rgb(0, 0, 0, 0.6);
 }
 
 #contact {
@@ -249,7 +269,7 @@ footer {
 
 .footer_rights {
   margin-top: 20px;
-  padding: 0px -40px; 
+  padding: 0px -40px;
   border-top: 1px solid #2f2f58;
 }
 
@@ -336,7 +356,7 @@ footer {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(1, auto-fit);
     text-align: start;
-    padding: 0px 150px;
+    padding: 0px 10%;
     gap: 40px;
   }
 
@@ -347,5 +367,4 @@ footer {
   .social-icons {
     justify-content: flex-start;
   }
-
 }
